--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="src/assets/al-quran.png" />
+    <link rel="icon" href="src/assets/Liri.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Al-Qur'an</title>
-    <link rel="stylesheet" href="/tajweed.css">
+    <title>Liri</title>
   </head>
   <body>
     <div id="app"></div>
